# Ozzylogik

./: README.md  pyproject.toml
task/: config.py  main.py  property  task_1.py  task_2.py
task_2/: task.py
task_3/: task.py  test_mac.txt
