[tool.poetry]
name = "ozzylogik"
version = "0.1.0"
description = ""
authors = ["legio"]

[tool.poetry.dependencies]
python = "3.8"
mysql-connector = "^2.2.9"
httplib2 = "^0.18.1"
scapy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"